Theme align into hover dropdown, align fix coming up;

--- a/child-pages/style/style-animation.css
+++ b/child-pages/style/style-animation.css
@@ -484,7 +484,10 @@ p{
         }
 
         .dropdown-content a:hover {
-            background-color: rgb(0, 0, 0);
+
+            box-shadow: 0px 0px 10px 0px rgb(255, 60, 60), 0px 0px 50px 0px rgb(255, 80, 80) inset;
+            background-color: rgba(255, 0, 0, 0.603);
+
         }
 
         .dropdown:hover .dropdown-content {
